# ChangeLog for media-video/dirac
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/dirac/ChangeLog,v 1.7 2008/01/28 20:23:55 aballier Exp $

*dirac-0.9.1 (28 Jan 2008)

  28 Jan 2008; Alexis Ballier <aballier@gentoo.org> +dirac-0.9.1.ebuild:
  version bump

*dirac-0.8.0 (21 Oct 2007)

  21 Oct 2007; Alexis Ballier <aballier@gentoo.org> +dirac-0.8.0.ebuild:
  version bump

*dirac-0.5.4 (14 Feb 2007)

  14 Feb 2007; Hanno Boeck <hanno@gentoo.org> +dirac-0.5.4.ebuild:
  Add latest 0.5.x version, 0.6.0 is api incompatible.

*dirac-0.6.0 (20 Jan 2007)

  20 Jan 2007; Hanno Boeck <hanno@gentoo.org> +dirac-0.6.0.ebuild:
  Version bump.

  04 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> dirac-0.5.2.ebuild:
  Fix broken autotools handling.

  03 May 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata to list media-video@gentoo.org as maintainer.

*dirac-0.5.2 (10 Jun 2005)

  10 Jun 2005; Diego Pettenò <flameeyes@gentoo.org>
  +files/dirac-0.5.2-doc.patch, +metadata.xml, +dirac-0.5.2.ebuild:
  First addition to portage, needed to build dirac codec support on VLC. Added
  patch to make documentation compilation optional. It uses cppunit if present
  to do unit testing, but it has its own testsuite also if it's not present.
