@@ -5,23 +5,8 @@ AUX dirac-0.5.2-doc.patch 2300 RMD160 3bb68b0d27cb6ed9367835e5d689e4865cae0941 S
 MD5 75a42cb31d27cafec5f65b4289a303d1 files/dirac-0.5.2-doc.patch 2300
 RMD160 3bb68b0d27cb6ed9367835e5d689e4865cae0941 files/dirac-0.5.2-doc.patch 2300
 SHA256 0dc99fd46f21121248b4ccdd3a81690c366ac211be4c1199a57537490504ee1a files/dirac-0.5.2-doc.patch 2300
-DIST dirac-0.5.2.tar.gz 671231 RMD160 12dca7c01ad8b02f9343e00493d56fc4aa04c1d8 SHA1 ec355cebcebf38ccf1dff108b392a40a139752e3 SHA256 b0ff2b2e3d7e861daf31e1f4fa4e4bea55ed63d368aa50bd61a13a109abe65a9
-DIST dirac-0.5.4.tar.gz 719468 RMD160 d735a856781e93f4d6fd15fb6dffdc0367b50a8c SHA1 ba040c134e433378ccdac483c9c09c3147944fd1 SHA256 a08e24294851f3f3ce4d546b71ad13b2555c6c3308a68e8f4088e1778f3e772b
-DIST dirac-0.6.0.tar.gz 761854 RMD160 f3ac8f987c3e79154bd5b4695dac778f0c57f21a SHA1 018051a86b2af1e51c237b1d3aaa353d4fe6c9bd SHA256 c889bcd621bf50e916f4560482566cba9a4bd620303e2c163d84f8d680bb65e0
 DIST dirac-0.8.0.tar.gz 880582 RMD160 a6f3dc7ca8c14b76efffa582cbcd2828b321d73a SHA1 5aa225e57000980cdccb8adf13fe30748e6465bd SHA256 f3392bf2e194b036e3c3f297705b77505c9f8fc3c852de689b062053e279eb2d
 DIST dirac-0.9.1.tar.gz 909117 RMD160 d6d52fdfdb713390ee52bced2af322132e6d391c SHA1 81bbb9bb9875f76c2d61d2d161306033c7de3d4e SHA256 ef14acf06118f40c11b0ccb236dd608f7596f3a255ddd07ce6634a1495d2b437
-EBUILD dirac-0.5.2.ebuild 1057 RMD160 eb4e2f53f3749afc61f0750739d61b3b4fc97866 SHA1 d8a4b6b14ad94ac884dc17596ba0aa9205c887a9 SHA256 629a43910abaef1522a2bf546078c220ab52800a35dbc2b959b315d2dcf2437d
-MD5 caa95007843219d9bf706b5867d3111e dirac-0.5.2.ebuild 1057
-RMD160 eb4e2f53f3749afc61f0750739d61b3b4fc97866 dirac-0.5.2.ebuild 1057
-SHA256 629a43910abaef1522a2bf546078c220ab52800a35dbc2b959b315d2dcf2437d dirac-0.5.2.ebuild 1057
-EBUILD dirac-0.5.4.ebuild 1065 RMD160 7b9d05af7147e48efd71571c307bc41ac114dee6 SHA1 abf3cf8731f884cdfb551bb19be895db157d39c0 SHA256 850709b6d6d63250f8a8eb1cba0ba81d1dc4cb07571e82b934071e8683688643
-MD5 b2f029816befe2ca720449308d64f164 dirac-0.5.4.ebuild 1065
-RMD160 7b9d05af7147e48efd71571c307bc41ac114dee6 dirac-0.5.4.ebuild 1065
-SHA256 850709b6d6d63250f8a8eb1cba0ba81d1dc4cb07571e82b934071e8683688643 dirac-0.5.4.ebuild 1065
-EBUILD dirac-0.6.0.ebuild 1065 RMD160 eb1c9a5c6f2df1eb1327538574986f837d7909d1 SHA1 c8819d922daf467b8cd3fc375a635db29167c1d8 SHA256 ac1de467fd066d5bf3c15be7f89309cb830f18b1792d5eaae1e87a04b0f1b0d5
-MD5 9b284ce19e98d0a181415aece0278f63 dirac-0.6.0.ebuild 1065
-RMD160 eb1c9a5c6f2df1eb1327538574986f837d7909d1 dirac-0.6.0.ebuild 1065
-SHA256 ac1de467fd066d5bf3c15be7f89309cb830f18b1792d5eaae1e87a04b0f1b0d5 dirac-0.6.0.ebuild 1065
 EBUILD dirac-0.8.0.ebuild 1099 RMD160 35b16f6eaaa1f13a37babc0ce5929f7ac03f5d97 SHA1 cca42a5c5d17261ccbf31568f12a4fd7a003714f SHA256 11b3e9d5f3c3e76c60b77c6907dc561ba22c75def0931cf7054a547d4b85d963
 MD5 9e24c442e092422ab58abb08b9e460c3 dirac-0.8.0.ebuild 1099
 RMD160 35b16f6eaaa1f13a37babc0ce5929f7ac03f5d97 dirac-0.8.0.ebuild 1099
@@ -30,23 +15,14 @@ EBUILD dirac-0.9.1.ebuild 1099 RMD160 bf28432f78144972782585583b291cdb3fd85688 S
 MD5 a3d70c5db397da89994bb957ad651c01 dirac-0.9.1.ebuild 1099
 RMD160 bf28432f78144972782585583b291cdb3fd85688 dirac-0.9.1.ebuild 1099
 SHA256 195d49897e7528f114175660b718acb24cc8e994c5dba1e2875be7c8cafa318d dirac-0.9.1.ebuild 1099
-MISC ChangeLog 1330 RMD160 ac150aa5f799f1f1fce5e302742fbfe225ffe1ca SHA1 fc564a2ace4129cac5a93cc324789ea4ebbca33a SHA256 70b993bea81c3117450b1b38af4d17b9cf5305e34eb69fc42ed5bf5ba938b6b3
-MD5 42cb8e022f6ae92e5fc09a4fd8107d10 ChangeLog 1330
-RMD160 ac150aa5f799f1f1fce5e302742fbfe225ffe1ca ChangeLog 1330
-SHA256 70b993bea81c3117450b1b38af4d17b9cf5305e34eb69fc42ed5bf5ba938b6b3 ChangeLog 1330
+MISC ChangeLog 1461 RMD160 033b9c8e1206a4afff4b5fec09824e1657949565 SHA1 83dd7333d7d141154a2bcfb251b91a5003f98536 SHA256 43f50cb20ff3e02b1f07dbaec395fe7e5ffa35cb100e1b9755812fdf83277733
+MD5 53ad68279c874fde6c553dc5aa1bfd79 ChangeLog 1461
+RMD160 033b9c8e1206a4afff4b5fec09824e1657949565 ChangeLog 1461
+SHA256 43f50cb20ff3e02b1f07dbaec395fe7e5ffa35cb100e1b9755812fdf83277733 ChangeLog 1461
 MISC metadata.xml 223 RMD160 86b42c49b694db39ddb3fdc60b98a3ad1a0c3392 SHA1 ea8c387229caaf4b0d3c9fbef9143b70dcae0b0d SHA256 dd48e823ec9a151bc3611121402ed26ee24eb3304aa62870b1e875a8fa0ac812
 MD5 0338bfb24d7bfb6450aac4dd025c0096 metadata.xml 223
 RMD160 86b42c49b694db39ddb3fdc60b98a3ad1a0c3392 metadata.xml 223
 SHA256 dd48e823ec9a151bc3611121402ed26ee24eb3304aa62870b1e875a8fa0ac812 metadata.xml 223
-MD5 c70faf68beb05273c118c5d79a22c5ac files/digest-dirac-0.5.2 235
-RMD160 75ce527323b4e929e1b09b5c7c58ac2a12774856 files/digest-dirac-0.5.2 235
-SHA256 306fe43cdc3a099e8c4487695de67494021b22f05428f5d5301ff0c0f47319ea files/digest-dirac-0.5.2 235
-MD5 b5ce303553d8cb87c26c68f26631d948 files/digest-dirac-0.5.4 235
-RMD160 930a307f5ddf10c4886598888145bfc566cb0cea files/digest-dirac-0.5.4 235
-SHA256 d9404dd09c1bb6d578b6b65d77419c3fb321b708a87ef5f6e4fb31d8b59e44d0 files/digest-dirac-0.5.4 235
-MD5 e4f3e8cf47d650f85663f610f64611d2 files/digest-dirac-0.6.0 235
-RMD160 efd36e141e482e0fb273a1e1106f2aa456d3ba40 files/digest-dirac-0.6.0 235
-SHA256 025bfa4140dac08e2ada00affc5743f43c88d699795cab5ac4062cab16949cff files/digest-dirac-0.6.0 235
 MD5 402dd2b697d33a5cd2647d12aa5af563 files/digest-dirac-0.8.0 235
 RMD160 d3b611d2f30145b5ba997d8277024b3b707d434d files/digest-dirac-0.8.0 235
 SHA256 48332b288b4b5c1cacbc15e28d0ae43e5b8cf1bb7c19b3f78bebe652215d02a1 files/digest-dirac-0.8.0 235
@@ -56,7 +32,7 @@ SHA256 3f00538357cc5cf91f918cc18276e6ca4462066b0713d64a124be65b0ee6a20f files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHnjnmvFcC4BYPU0oRAm7tAKCi+aM35+hyzhaajmXsncKARWxq8ACgzlcO
-bvXJT4d2IFFZwp+0BfHdY10=
-=RHtr
+iD8DBQFHnjp6vFcC4BYPU0oRApgSAJ4iufRY5U/m7WKh4hj2Z0qEx5LDigCeOp5W
+I6H5CRk3PYxrmOCM6MtaIKc=
+=ovgu
 -----END PGP SIGNATURE-----
