@@ -1,51 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/dirac/Attic/dirac-0.6.0.ebuild,v 1.1 2007/01/20 08:43:44 hanno Exp $
-
-WANT_AUTOCONF="latest"
-WANT_AUTOMAKE="latest"
-
-inherit eutils autotools
-
-DESCRIPTION="Open Source video codec"
-HOMEPAGE="http://dirac.sourceforge.net/"
-SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
-
-LICENSE="MPL-1.1"
-SLOT="0"
-KEYWORDS="~x86 ~amd64"
-IUSE="mmx debug doc"
-
-DEPEND="doc? ( app-doc/doxygen
-	virtual/tetex )"
-RDEPEND=""
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
-	epatch "${FILESDIR}/${PN}-0.5.2-doc.patch"
-
-	eautoreconf
-}
-
-src_compile() {
-	econf \
-		$(use_enable mmx) \
-		$(use_enable debug) \
-		$(use_enable doc) \
-		|| die "econf failed"
-
-	emake || die "emake failed"
-}
-
-src_install() {
-	make DESTDIR="${D}" \
-		htmldir="/usr/share/doc/${PF}/html" \
-		latexdir="/usr/share/doc/${PF}/programmers" \
-		algodir="/usr/share/doc/${PF}/algorithm" \
-		faqdir="/usr/share/doc/${PF}" \
-		install
-
-	dodoc README AUTHORS NEWS TODO ChangeLog
-}
