@@ -1,3 +1,0 @@
-MD5 e83e3dc3025c04b3163fbcd1d5e6a328 dirac-0.5.2.tar.gz 671231
-RMD160 12dca7c01ad8b02f9343e00493d56fc4aa04c1d8 dirac-0.5.2.tar.gz 671231
-SHA256 b0ff2b2e3d7e861daf31e1f4fa4e4bea55ed63d368aa50bd61a13a109abe65a9 dirac-0.5.2.tar.gz 671231
