@@ -1,3 +1,0 @@
-MD5 f790a7220140fb41f6d90d2ced6a6a4d dirac-0.5.4.tar.gz 719468
-RMD160 d735a856781e93f4d6fd15fb6dffdc0367b50a8c dirac-0.5.4.tar.gz 719468
-SHA256 a08e24294851f3f3ce4d546b71ad13b2555c6c3308a68e8f4088e1778f3e772b dirac-0.5.4.tar.gz 719468
