@@ -1,3 +1,0 @@
-MD5 483eb3a05ea7f569a6bfd98f630c8b9e dirac-0.6.0.tar.gz 761854
-RMD160 f3ac8f987c3e79154bd5b4695dac778f0c57f21a dirac-0.6.0.tar.gz 761854
-SHA256 c889bcd621bf50e916f4560482566cba9a4bd620303e2c163d84f8d680bb65e0 dirac-0.6.0.tar.gz 761854
