@@ -1,6 +1,10 @@
 # ChangeLog for media-video/dirac
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/dirac/ChangeLog,v 1.7 2008/01/28 20:23:55 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/dirac/ChangeLog,v 1.8 2008/01/28 20:26:24 aballier Exp $
+
+  28 Jan 2008; Alexis Ballier <aballier@gentoo.org> -dirac-0.5.2.ebuild,
+  -dirac-0.5.4.ebuild, -dirac-0.6.0.ebuild:
+  remove old
 
 *dirac-0.9.1 (28 Jan 2008)
 
